complete section faq (remade block) | last commit 07.10.2024

--- a/index.html
+++ b/index.html
@@ -372,8 +372,9 @@
                     <div class="resources-content">
                         <div class="resources-content__top">CUSTOMER RESOURCE</div>
                         <div class="resources-content__title">Customer Value Hub</div>
-                        <div class="resources-content__info">See how Autodesk and the AEC Community work together, sharing ideas that define what’s next for Revit.</div>
-                            <div class="resources-content__line"></div>
+                        <div class="resources-content__info">See how Autodesk and the AEC Community work together,
+                            sharing ideas that define what’s next for Revit.</div>
+                        <div class="resources-content__line"></div>
                         <div class="resources-content__bottom">
                             <a href="#"><span class="ari-arrowright"></span>Visit Customer Value Hub</a>
                         </div>
@@ -386,7 +387,7 @@
                         <div class="resources-content__title">See what’s new in Autodesk Revit 2025</div>
                         <div class="resources-content__info">Read about Total Carbon Analysis, enhancements to site
                             design, and more in the latest release.</div>
-                            <div class="resources-content__line"></div>
+                        <div class="resources-content__line"></div>
                         <div class="resources-content__bottom">
                             <a href="#"><span class="ari-arrowright"></span>Read the Revit blog</a>
                         </div>
@@ -399,7 +400,7 @@
                         <div class="resources-content__title">See what’s next for Autodesk Revit</div>
                         <div class="resources-content__info">See what’s in the product development pipeline with a live
                             look at the Revit public roadmap.</div>
-                            <div class="resources-content__line"></div>
+                        <div class="resources-content__line"></div>
                         <div class="resources-content__bottom">
                             <a href="#"><span class="ari-arrowright"></span>Visit the Revit roadmap</a>
                         </div>
@@ -410,132 +411,105 @@
 
     <section class="faq">
         <div class="container">
-            <div class="faq__list">
-                <details class="faq__item">
-                    <summary class="faq__capt">What is Autodesk software used for?</summary>
-                    <div class="faq__desk">
-                        <p>Autodesk's broad portfolio of products and services enables our customers to foster
-                            innovation,
-                            optimize and improve their designs, save time and money, improve quality, communicate
-                            plans,
-                            and
-                            collaborate with others.
-                        </p>
-                        <p>
-                            Our software for architecture, engineering, and construction improves the way buildings,
-                            factories,
-                            and infrastructure are designed, built, and used.
-                        </p>
-                        <p>
-                            Our product development and manufacturing software provides manufacturers in automotive,
-                            transportation, industrial machinery, consumer products, and building products with
-                            comprehensive
-                            digital engineering solutions that bring together data from all phases of the product
-                            development
-                            and production lifecycle.
-                        </p>
-                        <p>
-                            Our digital media and entertainment products provide tools for digital sculpting,
-                            modeling,
-                            animation, effects, rendering, and compositing for design visualization, visual effects,
-                            and
-                            games
-                            production.
-                        </p>
-                    </div>
-                </details>
-                <details class="faq__item">
-                    <summary class="faq__capt">What is the difference between AutoCAD and Autodesk?</summary>
-                    <div class="faq__desk">
-                        <p>Autodesk is the company that makes software for people who make things. AutoCAD is one of
-                            the
-                        </p>
-                        software subscriptions that Autodesk has developed and offers to designers around the globe.
-                        AutoCAD is computer-aided design (CAD) software that architects, engineers, and construction
-                        professionals rely on to create precise 2D and 3D drawings..
-                    </div>
-                </details>
-                <details class="faq__item">
-                    <summary class="faq__capt">How can I convert my Autodesk software trial to a paid
-                        subscription?
-                    </summary>
-                    <div class="faq__desk">
-                        Launch your trial, click the <b>SUBSCRIBE NOW</b> button, and follow the necessary steps to
-                        purchase your subscription. Once your purchase is complete, simply relaunch the product to
-                        have
-                        immediate access to your subscription. No need to download or install the product again. For
-                        additional help, visit the <br>
-                        <a class="faq__link" href="#">Autodesk Knowledge Network.</a>
-                    </div>
-                </details>
-                <details class="faq__item">
-                    <summary class="faq__capt">Can I switch to subscription from a maintenance plan?</summary>
-                    <div class="faq__desk">
-                        Yes. To help customers transition to a named user plan, new trade-in offers will be
-                        available
-                        starting May2020.
-                        <a class="faq__link" href="#">Learn more about our trade-in offers</a>
-                    </div>
-                </details>
-                <details class="faq__item">
-                    <summary class="faq__capt">How do I renew my license?</summary>
-                    <div class="faq__desk">
-                        Software renewal varies depending on how you purchased your subscription. For detailed
-                        renewal
-                        instructions, visit
-                        <a class="faq__link" href="#">How to renew your subscription</a>
-                    </div>
-                </details>
-                <details class="faq__item">
-                    <summary class="faq__capt">Where can I buy Autodesk software?</summary>
-                    <div class="faq__desk">
-                        <p>We’re glad you asked!</p>
+            <div class="faq__top">Frequently asked questions (FAQs)</div>
+            <div class="faq__flex">
+                <div class="faq__info">
+                    <div class="faq__cards">
+                        <details class="faq__card">
+                            <summary class="faq__title">How do I download Revit?</summary>
+                            <p>
+                                Autodesk provides download and install instructions <a class="faq-link" href="#">for
+                                    individuals</a> and <a class="faq-link" href="#">administrators.</a>
+                                Your available downloads appear in <a class="faq-link" href="#">Autodesk Account.</a>
+                                Find your product, select a
+                                version, platform, language, and download method. For more information, visit the
+                                <a class="faq-link" href="#">Autodesk Knowledge Network.</a>
+                            </p>
+                        </details>
+                        <details class="faq__card">
+                            <summary class="faq__title">What is Autodesk Revit used for?</summary>
+                            <p>
+                                Autodesk Revit is used to design, document, visualize, and deliver architecture,
+                                engineering, and construction projects.
+                            </p>
+                        </details>
+                        <details class="faq__card">
+                            <summary class="faq__title">Who uses Autodesk Revit?</summary>
+                            <p>
+                                Architects, structural engineers, MEP engineers, civil engineers, construction
+                                professionals, fabricators, computational designers, owners, and more all use Autodesk
+                                Revit to achieve their design, construction, operations, and maintenance goals for
+                                buildings and infrastructure.
+                            </p>
+                        </details>
 
-                        <p>Your fastest option is to subscribe to any of our most popular Autodesk products directly
-                            on
-                            this page.</p>
+                        <button class="faq__button">See more</button>
 
-                        <p>Talk to a sales representative by calling 1-844-664-8618.</p>
-
-                        <p>Find an <a class="faq__link" href="#">authorized reseller</a>.</p>
+                        <div class="faq-see-more --hide">
+                            <details class="faq__card">
+                                <summary class="faq__title">Which versions of Revit can I use if I subscribe to the
+                                    current version?</summary>
+                                <p>
+                                    Your Revit subscription gives you access to install and use the 3 previous versions.
+                                    Available downloads are listed in your <a class="faq-link" href="#">Autodesk
+                                        Account</a> after subscribing. See
+                                    also <a class="faq-link" href="#">previous releases available for subscribers</a>.
+                                </p>
+                            </details>
+                            <details class="faq__card">
+                                <summary class="faq__title">Which operating system does Autodesk Revit run on?</summary>
+                                <p>
+                                    Autodesk Revit runs on Microsoft® Windows®. See <a class="faq-link" href="#">Revit
+                                        system requirements</a> for details.
+                                </p>
+                            </details>
+                            <details class="faq__card">
+                                <summary class="faq__title">Can I install Revit on multiple computers?</summary>
+                                <p>
+                                    With a subscription to Revit software, you can install it on up to 3 computers or
+                                    other devices. However, only the named user can sign in and use that software on a
+                                    single computer at any given time. Please refer to the <a class="faq-link"
+                                        href="#">Software License Agreement</a>
+                                    for more information.
+                                </p>
+                            </details>
+                            <details class="faq__card">
+                                <summary class="faq__title">How do I convert my Revit free trial to a paid subscription?
+                                </summary>
+                                <p>
+                                    Launch your trial software and click Subscribe Now on the trial screen or buy Revit
+                                    <a class="faq-link" href="#">here.</a> When buying your subscription, enter the same
+                                    email address and password
+                                    combination you used to sign in to your trial. Learn more about <a class="faq-link"
+                                        href="#">converting a trial
+                                        to a paid subscription.</a>
+                                </p>
+                            </details>
+                            <details class="faq__card">
+                                <summary class="faq__title">I am using a free trial of Autodesk Revit, what are some
+                                    resources that can help me?
+                                </summary>
+                                <p>
+                                    A great place to start is the <a class="faq-link" href="#">Revit Quick Start
+                                        Guide</a>. Learn the basics of Autodesk
+                                    Revit through approachable online instructions, and model for architecture,
+                                    structures, and MEP. Sample content is available on the Home screen once Autodesk
+                                    Revit is open.
+                                    <br>
+                                    <br>
+                                    A guide to <a class="faq-link" href="#">keyboard shortcuts</a> is also available.
+                                    Shortcuts are recommended as you
+                                    learn your way around the software.
+                                </p>
+                            </details>
+                        </div>
                     </div>
-                </details>
-                <details class="faq__item">
-                    <summary class="faq__capt">Can I install Autodesk software on multiple computers?</summary>
-                    <div class="faq__desk">
-                        Your subscription software can be installed on up to three devices. However, only the named
-                        user
-                        can sign in and use that software on a single computer at any given time. Please refer to
-                        the
-                        <a class="faq__link" href="#">Terms of Use</a> for more information.
-                    </div>
-                </details>
-                <details class="faq__item">
-                    <summary class="faq__capt">Can I buy Autodesk software without a subscription?</summary>
-                    <div class="faq__desk">
-                        Autodesk software is only available as a subscription. Learn more about the <a class="faq__link"
-                            href="#">benefits of subscription</a>.
-                    </div>
-                </details>
-                <details class="faq__item">
-                    <summary class="faq__capt">Who uses Autodesk software?</summary>
-                    <div class="faq__desk">
-                        Autodesk is a global leader in design and make software for the architecture, engineering,
-                        construction, media and entertainment, and manufacturing industries. If you’ve ever driven a
-                        high-performance car, admired a towering skyscraper, used a smartphone, or watched a great
-                        film,
-                        chances are you've experienced what millions of Autodesk customers have built with our
-                        software.
-                    </div>
-                </details>
-                <details class="faq__item">
-                    <summary class="faq__capt">What happened to perpetual licenses?</summary>
-                    <div class="faq__desk">
-                        As of August 1, 2016, we have phased out perpetual licenses of our software for Autodesk
-                        products worldwide. Take advantage of subscription benefits by purchasing <a class="faq__link"
-                            href="#">here</a>.
-                    </div>
-                </details>
+                </div>
+                <div class="faq__support">
+                    <div class="faq__img"><img src="./image/pc.png" alt="#"></div>
+                    <a class="faq__link" href="#">Support and problem solving</a>
+                    <p class="faq__text">Find troubleshooting articles and resolve your issue.</p>
+                </div>
             </div>
         </div>
     </section>
