--- a/storage.html
+++ b/storage.html
@@ -18,14 +18,11 @@
         <input class="local-storage__date" type="text" placeholder="mark"><br>
 
         <div class="local-storage__btn">
-            <button class="add-stor">Добавить в стор</button>
-            <button class="add-all">Show all store</button>
+            <button class="add-store">Добавить в стор</button>
+            <button class="clear-store">Clear Stor</button>
         </div>
 
-        <p class="text"></p>
-        <button class="clear-store">Clear store</button>
-
-    </div>
+        <div class="local-storage__item"></div>
 
     <script src="./js/local-storage.js" type="module"></script>
 
