--- a/index.html
+++ b/index.html
@@ -666,9 +666,9 @@
     <div class="autodesk-widget --hide">
         <div class="autodesk-widget__header">
             <span class="header-title">Autodesk Assistant</span>
-            <span data-tooltipe="Minimize" class="ari-block"></span>
-            <span data-tooltipe="Full Screen" class="ari-fullscreen"></span>
-            <span data-tooltipe="Close" class="ari-close"></span>
+            <span class="ari-block"></span>
+            <span class="ari-fullscreen"></span>
+            <span class="ari-close"></span>
         </div>
         <div class="autodesk-widget__content">
             <div class="content__card">Hi, I’m Autodesk Assistant. I can help with product selection, purchasing,
